# OEP-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera_utils.cpp  camera_utils.hpp  effect_player.cpp  effect_player.hpp  glfw_context.hpp  glfw_user_data.hpp  glfw_window.cpp  glfw_window.hpp  graphical_user_interface.cpp  graphical_user_interface.hpp  main.cpp  opengl_context.hpp  render_context.cpp  render_context.hpp
bnb_sdk/: CMakeLists.txt
cmake/: copy_libs.cmake  libyuv.cmake  utils.cmake
glad/: CmakeLists.txt
glad/src/: glad.c
interfaces/: offscreen_effect_player.hpp  offscreen_render_target.hpp  pixel_buffer.hpp
libraries/: CmakeLists.txt
libraries/glad/: CMakeLists.txt  CmakeLists.txt  glad.c  glad.h
libraries/glad/include/glad/: glad.h  khrplatform.h
libraries/glad/src/: glad.c
libraries/renderer/: CMakeLists.txt  frame_surface_handler.cpp  frame_surface_handler.hpp  render_thread.cpp  render_thread.hpp  renderer.cpp  renderer.hpp
libraries/renderer/include/: frame_surface_handler.hpp  render_thread.hpp  renderer.hpp  renderer_gl_context.hpp
libraries/renderer/src/: frame_surface_handler.cpp  render_thread.cpp  renderer.cpp  renderer_gl_context.cpp
libraries/utils/: CmakeLists.txt  glfw_window.cpp  glfw_window.hpp
libraries/utils/glfw_utils/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp
libraries/utils/glfw_utils/include/: glfw_window.hpp
libraries/utils/glfw_utils/src/: glfw_window.cpp
libraries/utils/ogl_utils/: CMakeLists.txt  opengl.cpp  opengl.hpp
libraries/utils/ogl_utils/include/: opengl.hpp
libraries/utils/ogl_utils/src/: opengl.cpp  program.cpp
offscreen_effect_player/: CMakeLists.txt
offscreen_effect_player/include/: offscreen_effect_player.hpp  pixel_buffer.hpp
offscreen_effect_player/src/: offscreen_effect_player.cpp  pixel_buffer.cpp
offscreen_render_target/: CMakeLists.txt
offscreen_render_target/include/: offscreen_render_target.hpp
offscreen_render_target/platform/macos/src/: main_queue_runner.mm
offscreen_render_target/src/: offscreen_render_target.cpp
player_api/: CMakeLists.txt  CMakePrivateSources.txt  CMakePublicHeaders.txt
player_api/bnb/player_api/input/: input_base.cpp  input_base.hpp  input_pixels_base.cpp  input_pixels_base.hpp  live_input.cpp  live_input.hpp  photo_input.cpp  photo_input.hpp  pixels_provider.hpp  stream_input.cpp  stream_input.hpp
player_api/bnb/player_api/input/private/: input_pixels_base.cpp  input_pixels_base.hpp  live_input.cpp  photo_input.cpp  stream_input.cpp
player_api/bnb/player_api/interfaces/: input.hpp  orientation.hpp  output.hpp  pixel_buffer.hpp  pixel_buffer_format.hpp  player.hpp  render_context.hpp  render_delegate.hpp  render_target.hpp
player_api/bnb/player_api/interfaces/input/: live_input.hpp  photo_input.hpp  stream_input.hpp
player_api/bnb/player_api/interfaces/output/: opengl_frame_output.hpp  orientable.hpp  scalable.hpp  texture_output.hpp  window_output.hpp
player_api/bnb/player_api/interfaces/pixel_buffer/: pixel_buffer.hpp
player_api/bnb/player_api/interfaces/player/: player.hpp
player_api/bnb/player_api/interfaces/render_target/: opengl_render_target.hpp
player_api/bnb/player_api/interfaces/types/: orientation.hpp  pixel_buffer_format.hpp
player_api/bnb/player_api/opengl/: opengl.cpp  opengl.hpp  opengl_context.cpp  opengl_context.hpp  opengl_frame_surface_handler.cpp  opengl_frame_surface_handler.hpp  opengl_renderbuffer.cpp  opengl_renderbuffer.hpp  opengl_shader_program.cpp  opengl_shader_program.hpp
player_api/bnb/player_api/output/: opengl_frame_output.cpp  opengl_frame_output.hpp  orientable.hpp  orientable_scalable_base.cpp  orientable_scalable_base.hpp  output_base.cpp  output_base.hpp  scalable.hpp  texture_output.cpp  texture_output.hpp  window_output.cpp  window_output.hpp
player_api/bnb/player_api/output/private/: opengl_frame_output.cpp  orientable_scalable_base.cpp  orientable_scalable_base.hpp  texture_output.cpp  window_output.cpp
player_api/bnb/player_api/pixel_buffer/: pixel_buffer.cpp  pixel_buffer.hpp
player_api/bnb/player_api/pixel_buffer/private/: pixel_buffer.cpp
player_api/bnb/player_api/player/: player.cpp  player.hpp  thread_pool.hpp
player_api/bnb/player_api/player/private/: player.cpp
player_api/bnb/player_api/render_target/: opengl_render_target.cpp  opengl_render_target.hpp
player_api/bnb/player_api/render_target/private/: opengl_render_target.cpp
player_api/bnb/player_api/third/: CMakeLists.txt
player_api/bnb/player_api/types/: base.hpp  content_mode.hpp  orientation.cpp  orientation.hpp  pixel_buffer_format.cpp  pixel_buffer_format.hpp  yuv_conversion.cpp  yuv_conversion.hpp  yuv_conversion_matrices.cpp  yuv_conversion_matrices.hpp
player_api/bnb/player_api/types/private/: orientation.cpp  yuv_conversion.cpp
player_api/bnb/player_api/utils/: common.hpp  utils.cpp  utils.hpp  yuv_conversion.cpp  yuv_conversion.hpp
resources/mac/: Info.plist.in
third/glad/include/glad/: glad.h
